chore: Add More Boilerplate and Configuration Files. Fixes Any Side Effects.

--- a/.github/ISSUE_TEMPLATE/02-feature-request.yml
+++ b/.github/ISSUE_TEMPLATE/02-feature-request.yml
@@ -1,5 +1,5 @@
 name: Suggest a New Feature or Improvement for the Science Center Project
-description: "Do you have an idea or suggestion you want to share?"
+description: 'Do you have an idea or suggestion you want to share?'
 labels: [feature request]
 body:
   - type: markdown
@@ -9,7 +9,7 @@ body:
         existing issues if there's already something related to your suggestion.
   - type: textarea
     attributes:
-      label: "Suggestion Details:"
+      label: 'Suggestion Details:'
       placeholder: |
         1. What is the feature you are suggesting?
         2. Why do you think it would be beneficial to the project?
