--- a/.github/ISSUE_TEMPLATE/01-bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/01-bug-report.yml
@@ -1,5 +1,5 @@
 name: Report a Technical/Visual Issue in the Science Center Project
-description: "Is something not working as expected? Did you encounter a glitch or a bug with the project?"
+description: 'Is something not working as expected? Did you encounter a glitch or a bug with the project?'
 labels: [bug]
 body:
   - type: markdown
@@ -10,35 +10,35 @@ body:
         easier for us to fix it when you attach a screenshot as well.
   - type: input
     attributes:
-      label: "URL:"
+      label: 'URL:'
       description: The URL of the page you are reporting an issue on.
       placeholder: https://https://ehharding.github.io/science-center/en/
     validations:
       required: true
   - type: input
     attributes:
-      label: "Browser Name:"
+      label: 'Browser Name:'
       description: What kind of browser are you using?
       placeholder: Chrome
     validations:
       required: true
   - type: input
     attributes:
-      label: "Browser Version:"
+      label: 'Browser Version:'
       description: What browser version are you using?
-      placeholder: "103.0.5060.134"
+      placeholder: '103.0.5060.134'
     validations:
       required: true
   - type: input
     attributes:
-      label: "Operating System:"
+      label: 'Operating System:'
       description: What kind of operation system are you using? (Write it in full, with version number)
-      placeholder: "Windows 11 Pro, 23H2, 22631.3672"
+      placeholder: 'Windows 11 Pro, 23H2, 22631.3672'
     validations:
       required: true
   - type: textarea
     attributes:
-      label: "Steps to Reproduce:"
+      label: 'Steps to Reproduce:'
       placeholder: |
         1. What I did.
         2. What I expected to happen.
