--- a/.github/workflows/scorecard.yml
+++ b/.github/workflows/scorecard.yml
@@ -17,9 +17,9 @@ on:
   # To guarantee that the maintained check is occasionally updated. See
   # https://github.com/ossf/scorecard/blob/main/docs/checks.md#maintained.
   schedule:
-    - cron: "20 7 * * 2"
+    - cron: '20 7 * * 2'
   push:
-    branches: ["main"]
+    branches: ['main']
 
 permissions: read-all
 
