--- a/.github/ISSUE_TEMPLATE/01-bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/01-bug-report.yml
@@ -18,7 +18,7 @@ body:
   - type: input
     attributes:
       label: 'Browser Name:'
-      description: What kind of browser are you using?
+      description: What browser are you using?
       placeholder: Chrome
     validations:
       required: true
